--- a/Farkle/Base.lproj/Main.storyboard
+++ b/Farkle/Base.lproj/Main.storyboard
@@ -380,7 +380,7 @@
                     <window key="window" title="Farkle" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="196" y="240" width="480" height="270"/>
+                        <rect key="contentRect" x="196" y="240" width="685" height="270"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
                         <connections>
                             <outlet property="delegate" destination="B8D-0N-5wS" id="98r-iN-zZc"/>
@@ -399,7 +399,7 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <rect key="frame" x="0.0" y="0.0" width="685" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="t4P-zR-mfv" customClass="DieView">
@@ -468,7 +468,7 @@
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IyU-4Q-8J7">
                                 <rect key="frame" x="239" y="222" width="227" height="32"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="215" id="5db-2P-YhN"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="215" id="pGi-q1-KZF"/>
                                 </constraints>
                                 <buttonCell key="cell" type="push" title="Roll" bezelStyle="rounded" alignment="center" enabled="NO" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="5GO-7u-ZMx">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -498,29 +498,94 @@
                                     <action selector="bankPoints:" target="XfG-lQ-9wD" id="v9d-jp-VNb"/>
                                 </connections>
                             </button>
+                            <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="plm-B2-oyZ">
+                                <rect key="frame" x="468" y="20" width="197" height="230"/>
+                                <clipView key="contentView" id="h0t-US-wXh">
+                                    <rect key="frame" x="1" y="0.0" width="195" height="229"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" headerView="nvh-cz-Vsb" id="ign-Wt-vyT">
+                                            <rect key="frame" x="0.0" y="0.0" width="195" height="206"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <size key="intercellSpacing" width="3" height="2"/>
+                                            <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
+                                            <tableColumns>
+                                                <tableColumn identifier="" width="118" minWidth="40" maxWidth="1000" id="fko-dB-dug">
+                                                    <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Player Name">
+                                                        <font key="font" metaFont="smallSystem"/>
+                                                        <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
+                                                        <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
+                                                    </tableHeaderCell>
+                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" title="Text Cell" id="tC7-ih-ACR">
+                                                        <font key="font" metaFont="system"/>
+                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                        <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                    </textFieldCell>
+                                                    <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                                </tableColumn>
+                                                <tableColumn identifier="" width="71" minWidth="40" maxWidth="1000" id="M6O-mm-sgg">
+                                                    <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Score">
+                                                        <font key="font" metaFont="smallSystem"/>
+                                                        <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
+                                                        <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
+                                                    </tableHeaderCell>
+                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" title="Text Cell" id="s8B-A9-KsI">
+                                                        <font key="font" metaFont="system"/>
+                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                        <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                    </textFieldCell>
+                                                    <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                                </tableColumn>
+                                            </tableColumns>
+                                            <connections>
+                                                <outlet property="dataSource" destination="XfG-lQ-9wD" id="E2y-an-I4u"/>
+                                                <outlet property="delegate" destination="XfG-lQ-9wD" id="dgB-l0-yuo"/>
+                                            </connections>
+                                        </tableView>
+                                    </subviews>
+                                </clipView>
+                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="6Ei-87-8Nm">
+                                    <rect key="frame" x="1" y="119" width="223" height="15"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="Hrd-ZK-rDo">
+                                    <rect key="frame" x="224" y="17" width="15" height="102"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <tableHeaderView key="headerView" id="nvh-cz-Vsb">
+                                    <rect key="frame" x="0.0" y="0.0" width="195" height="23"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableHeaderView>
+                            </scrollView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="NCp-uC-OmM" firstAttribute="trailing" secondItem="NRP-2q-nw6" secondAttribute="trailing" id="1Uv-Hd-L8Q"/>
-                            <constraint firstAttribute="trailing" secondItem="IyU-4Q-8J7" secondAttribute="trailing" constant="20" symbolic="YES" id="1cS-NW-OAb"/>
-                            <constraint firstAttribute="bottom" secondItem="t4P-zR-mfv" secondAttribute="bottom" constant="20" symbolic="YES" id="3FS-tX-eWe"/>
-                            <constraint firstItem="NRP-2q-nw6" firstAttribute="leading" secondItem="DIr-Qd-2tB" secondAttribute="leading" id="6cD-Xh-4ff"/>
-                            <constraint firstItem="t4P-zR-mfv" firstAttribute="top" secondItem="IyU-4Q-8J7" secondAttribute="top" id="9N7-67-pDL"/>
-                            <constraint firstItem="NRP-2q-nw6" firstAttribute="trailing" secondItem="DIr-Qd-2tB" secondAttribute="trailing" id="BHN-JY-bG7"/>
-                            <constraint firstItem="NRP-2q-nw6" firstAttribute="top" secondItem="NCp-uC-OmM" secondAttribute="bottom" constant="12" symbolic="YES" id="Bhd-fy-VdO"/>
-                            <constraint firstItem="t4P-zR-mfv" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" symbolic="YES" id="GVh-Il-dUD"/>
-                            <constraint firstItem="NCp-uC-OmM" firstAttribute="top" secondItem="IyU-4Q-8J7" secondAttribute="bottom" constant="12" symbolic="YES" id="NXG-a4-DUu"/>
-                            <constraint firstItem="t4P-zR-mfv" firstAttribute="bottom" secondItem="DIr-Qd-2tB" secondAttribute="bottom" id="PCz-cn-Vvd"/>
-                            <constraint firstItem="IyU-4Q-8J7" firstAttribute="leading" secondItem="t4P-zR-mfv" secondAttribute="trailing" constant="8" symbolic="YES" id="f86-b9-C2i"/>
-                            <constraint firstItem="t4P-zR-mfv" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" symbolic="YES" id="gA7-K7-GF1"/>
-                            <constraint firstItem="DIr-Qd-2tB" firstAttribute="top" secondItem="NRP-2q-nw6" secondAttribute="bottom" constant="8" id="kqV-01-t4N"/>
-                            <constraint firstItem="NCp-uC-OmM" firstAttribute="leading" secondItem="NRP-2q-nw6" secondAttribute="leading" id="lvL-zS-O09"/>
-                            <constraint firstItem="IyU-4Q-8J7" firstAttribute="trailing" secondItem="NCp-uC-OmM" secondAttribute="trailing" id="r1Q-1Q-fVd"/>
-                            <constraint firstItem="IyU-4Q-8J7" firstAttribute="leading" secondItem="NCp-uC-OmM" secondAttribute="leading" id="vMX-qH-NyT"/>
+                            <constraint firstItem="NCp-uC-OmM" firstAttribute="top" secondItem="IyU-4Q-8J7" secondAttribute="bottom" constant="12" symbolic="YES" id="A8C-rg-1cJ"/>
+                            <constraint firstItem="NRP-2q-nw6" firstAttribute="leading" secondItem="DIr-Qd-2tB" secondAttribute="leading" id="Ap3-ys-HUM"/>
+                            <constraint firstItem="NRP-2q-nw6" firstAttribute="top" secondItem="NCp-uC-OmM" secondAttribute="bottom" constant="12" symbolic="YES" id="CCr-TC-cJ9"/>
+                            <constraint firstItem="t4P-zR-mfv" firstAttribute="bottom" secondItem="DIr-Qd-2tB" secondAttribute="bottom" id="G3G-2a-Qqb"/>
+                            <constraint firstItem="DIr-Qd-2tB" firstAttribute="bottom" secondItem="plm-B2-oyZ" secondAttribute="bottom" id="Iyr-7z-Awz"/>
+                            <constraint firstAttribute="bottom" secondItem="t4P-zR-mfv" secondAttribute="bottom" constant="20" symbolic="YES" id="KJa-p6-dWy"/>
+                            <constraint firstItem="IyU-4Q-8J7" firstAttribute="leading" secondItem="NCp-uC-OmM" secondAttribute="leading" id="QgC-nx-Et7"/>
+                            <constraint firstItem="t4P-zR-mfv" firstAttribute="top" secondItem="IyU-4Q-8J7" secondAttribute="top" id="QgE-N1-bGH"/>
+                            <constraint firstItem="plm-B2-oyZ" firstAttribute="leading" secondItem="NCp-uC-OmM" secondAttribute="trailing" constant="8" symbolic="YES" id="STa-an-mag"/>
+                            <constraint firstItem="IyU-4Q-8J7" firstAttribute="leading" secondItem="t4P-zR-mfv" secondAttribute="trailing" constant="8" symbolic="YES" id="Swb-K0-yGa"/>
+                            <constraint firstItem="NCp-uC-OmM" firstAttribute="leading" secondItem="NRP-2q-nw6" secondAttribute="leading" id="TlH-Tu-qeg"/>
+                            <constraint firstItem="plm-B2-oyZ" firstAttribute="leading" secondItem="IyU-4Q-8J7" secondAttribute="trailing" constant="8" symbolic="YES" id="TuG-gD-oZV"/>
+                            <constraint firstAttribute="trailing" secondItem="plm-B2-oyZ" secondAttribute="trailing" constant="20" symbolic="YES" id="UI8-8E-H70"/>
+                            <constraint firstItem="plm-B2-oyZ" firstAttribute="leading" secondItem="DIr-Qd-2tB" secondAttribute="trailing" constant="8" symbolic="YES" id="Ujh-hg-MtJ"/>
+                            <constraint firstItem="DIr-Qd-2tB" firstAttribute="top" secondItem="NRP-2q-nw6" secondAttribute="bottom" constant="8" id="hOT-Xk-yJp"/>
+                            <constraint firstItem="t4P-zR-mfv" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" symbolic="YES" id="htE-hp-p24"/>
+                            <constraint firstItem="t4P-zR-mfv" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" symbolic="YES" id="i1t-YM-d7J"/>
+                            <constraint firstItem="plm-B2-oyZ" firstAttribute="leading" secondItem="NRP-2q-nw6" secondAttribute="trailing" constant="8" symbolic="YES" id="pej-83-K8A"/>
+                            <constraint firstItem="IyU-4Q-8J7" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="245" id="uDM-UA-a2S"/>
+                            <constraint firstItem="IyU-4Q-8J7" firstAttribute="top" secondItem="plm-B2-oyZ" secondAttribute="top" id="xsB-dH-tmK"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="bankButton" destination="NRP-2q-nw6" id="Bms-u1-vWG"/>
                         <outlet property="dieView" destination="t4P-zR-mfv" id="Wdg-Rr-kjl"/>
+                        <outlet property="leaderboardTable" destination="ign-Wt-vyT" id="cnv-5T-2Gc"/>
                         <outlet property="rollButton" destination="IyU-4Q-8J7" id="TJK-6l-LlI"/>
                         <outlet property="selectionButton" destination="NCp-uC-OmM" id="md4-Jh-gEv"/>
                         <outlet property="selectionsTable" destination="KHM-2F-bMY" id="CUv-Sa-dF9"/>
@@ -528,7 +593,7 @@
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="138.5" y="814"/>
         </scene>
         <!--New Game Controller-->
         <scene sceneID="fA7-9J-cYW">
@@ -692,7 +757,7 @@ Gw
                 </windowController>
                 <customObject id="13P-35-EIb" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="686" y="410"/>
+            <point key="canvasLocation" x="755" y="405"/>
         </scene>
     </scenes>
 </document>
